Mon Mar 29 10:31:09 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc(excerpt): Added patch from Gabriele to
	improve display of excerpts--show top of description always,
	otherwise try to find the excerpt.

Sun Mar 28 19:45:02 1999  Hans-Peter Nilsson  <hp@bitrange.com>

	* htlib/HtWordType.h (HtIsWordChar): Avoid matching 0 when using
	strchr.
	(HtIsStrictWordChar): Ditto.

	* htdig/ExternalParser.cc (parse): Before got_href call, set
	hopcount of URL to that of base plus 1.
	Add URL to external parser error output.

	* htlib/URL.cc (URL(char *ref, URL &parent) ): Move call to
	constructURL call inside previous else-clause.
	(parse): Reset _normal, _signature, _user initially.
	Commence parsing, even if no "//" is found.  Do not set _normal
	here.
	(normalizePath): Call removeIndex finally.

	* htcommon/WordRecord.h (WORD_RECORD_COMPRESSED_FORMAT)
	[!NO_WORD_COUNT]: Change to "cu4".

	* htlib/HtPack.cc (htPack): Correct handling at end of code-string
	and end of encoding-byte.  Add code 'c' for often-1 unsigned ints.
	(htUnpack): Add handling of code 'c'.

Thu Mar 25 12:18:05 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* installdir/long.html, installdir/short.html: Remove backslashes
	before quotes in HTML versions of the builtin templates.

	* Makefile.in: Add long.html & short.html to COMMONHTML list, so
	they get installed in common_dir.

Thu Mar 25 11:56:50 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch), htcommon/defaults.cc, 
	htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Add date_format attribute suggested by Marc Pohl.

Thu Mar 25 09:46:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Avoid segfault when DocAnchors
	list has too few entries for current anchor number.

Tue Mar 23 15:08:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Fix problem when documents